Fixing layout issues

--- a/frontend/california-speed/src/App.css
+++ b/frontend/california-speed/src/App.css
@@ -6,7 +6,7 @@ body {
   display: grid;
   grid-template-columns: 25% 25% 25% 25%;
   grid-template-rows: 25% 25% 25% 25%;
-  grid-auto-flow: column;
+  grid-auto-flow: row;
   place-content: center;
   grid-row-gap: 5px;
   width: 100%;
